Version 0.6.2: Fix particle layer overflow

--- a/src/sass/deep-dive.scss
+++ b/src/sass/deep-dive.scss
@@ -21,7 +21,7 @@
     @extend .deep-dive--3d;
     left: -2%;
     list-style: none;
-    overflow: auto;
+    overflow: hidden;
     padding: 0;
     pointer-events: none;
 
